# Friday

./: .gitignore  main.py  pyproject.toml  requirements.txt  streamlit.py  streamlit_v1.py  test_debug_memory.py  test_memory.py  test_memrp copy 2.py  test_memrp copy.py  test_memrp.py  test_parsing.py
frontend/static/css/: main.css
frontend/static/js/: app.js  chat.js  utils.js
frontend/templates/: base.html  chat.html  index.html
my_mem/: client.py
my_mem/configs/: base.py
my_mem/embeddings/: base.py  openai.py
my_mem/llms/: base.py  openai.py
my_mem/memory/: main.py  short_memory.py  storage_sqlite.py
my_mem/rag/: rag_pipeline.py
my_mem/server/: api.py
my_mem/utils/: factory.py  prompts.py  utils.py
my_mem/vector_stores/: base.py  faiss.py
src/: main.py
src/core/brain/: base_brain.py  document_brain.py  hybrid_memory_brain.py  memory_brain.py  orchestrator.py
src/core/chat/: chat_manager.py  chat_store.py  models.py
src/core/config/: settings.py
src/core/documents/: base_parser.py  document_manager.py  document_store.py  docx_parser.py  models.py  parser_factory.py  pdf_parser.py  text_parser.py
src/core/llm/: base_llm.py  model_router.py  openai_provider.py
src/core/memory/: base_memory.py  memory_manager.py  models.py  sqlite_memory.py
src/core/telemetry/: logger.py
src/core/utils/: datetime_utils.py
src/interfaces/: main_api.py
src/interfaces/api/: chat_router.py
src/interfaces/websocket/: chat_websocket.py
